--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "ts-node": {
+    "files": true
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","environment.d.ts"],
   "exclude": ["node_modules"]
 }
