--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "Launch Chrome",
             "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\components\\Form\\index.tsx",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "type": "chrome",
+            "url": "http://localhost:5000",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
